# serializer version: 1
# name: test_export.1
  dict({
    'Category': 'Software/Hardware',
    'Collections': list([
      'Library',
      'My collection',
      'Test Folder / Another collection',
    ]),
    'Date': '2025-04-18',
    'Import date': '2025-04-18T18:19:08.763928+00:00',
    'OCR result': '''
      CPB Software (Germany) GmbH - Im Bruch 3 - 63897 Miltenberg/Main
      Musterkunde AG
      Mr. John Doe
      Musterstr. 23
      12345 Musterstadt Name: Stefanie Müller
      Phone: +49 9371 9786-0
      Invoice WMACCESS Internet
      VAT No. DE199378386
      Invoice No
      Customer No
      Invoice Period
      Date
      123100401
      12345
      01.02.2024 - 29.02.2024
      1. März 2024
      Service Description Amount
      -without VAT- quantity
      Total Amount
      Basic Fee wmView
      130,00 € 1
      130,00 €
      Basis fee for additional user accounts 10,00 € 0
      0,00 €
      Basic Fee wmPos
      50,00 € 0
      0,00 €
      Basic Fee wmGuide
      1.000,00 € 0
      0,00 €
      Change of user accounts
      10,00 € 0
      0,00 €
      Transaction Fee T1
      0,58 € 14
      8,12 €
      Transaction Fee T2 0,70 € 0
      0,00 €
      Transaction Fee T3
      1,50 € 162
      243,00 €
      Transaction Fee T4
      0,50 € 0
      0,00 €
      Transaction Fee T5 0,80 € 0
      0,00 €
      Transaction Fee T6 1,80 € 0
      0,00 €
      Transaction Fee G1 0,30 € 0
      0,00 €
      Transaction Fee G2
      0,30 € 0
      0,00 €
      Transaction Fee G3 0,40 € 0
      0,00 €
      Transaction Fee G4
      0,40 € 0
      0,00 €
      Transaction Fee G5 0,30 € 0
      0,00 €
      Transaction Fee G6 0,30 € 0
      0,00 €
      Total 381,12 €
      VAT 19 % 72,41 €
      Gross Amount incl. VAT 453,53 €
      Terms of Payment: Immediate payment without discount. Any bank charges must be paid by the invoice recipient.
      Bank fees at our expense will be charged to the invoice recipient!
      Please credit the amount invoiced to IBAN DE29 1234 5678 9012 3456 78 | BIC GENODE51MIC (SEPA Credit Transfer)
      This invoice is generated automatically and will not be signed
      Invoice Details
      Period: 01.02.2024 to 29.02.2024
      Unit: Musterkunde AG 12345
      Request sections: T1: T2: T3: T4: T5: T6: G1: G2: G3: G4: G5: G6:
      Amount in Euro: 0,58 0,70 1,50 0,50 0,80 1,80 0,30 0,30 0,40 0,40 0,30 0,30
      user-account-1 10 0 99 0 0 0 0 0 0 0 0 0 154,30 €
      user-account-2 4 0 63 0 0 0 0 0 0 0 0 0 96,82 €
      Transaction Fee Seg T1: T2: T3: T4: T5: T6: G1: G2: G3: G4: G5: G6:
      Queries in Total: 14 0 162 0 0 0 0 0 0 0 0 0
      Total in Euro: 8,12 € 0,00 € 243,00 € 0,00 € 0,00 € 0,00 € 0,00 € 0,00 € 0,00 € 0,00 € 0,00 € 0,00 € 251,12 €
      The explanation of the query fee categories (T1 to T6 and G1 to G6) can be found on our website:
      https://www.wmaccess.com/abfragekategorien
      Invoice Details for wmView Query Reference
      Period: 01.02.2024 to 29.02.2024
      Unit: Musterkunde AG 12345
      wmview, wmProfile and User Profiles Query Segments:
      Query Reference:
      T1: T2: T3: T4: T5: T6:
      *Not specified*
      4 0 9 0 0 0
      AZR/31/27439
      0 0 12 0 0 0
      CCL/3715
      0 0 4 0 0 0
      CRS/28432
      5 0 36 0 0 0
      Cs/52113
      0 0 19 0 0 0
      GS 32090 1 0 7 0 0 0
      Kpi/22695 2 0 6 0 0 0
      PG 7772
      0 0 11 0 0 0
      Rjn/11138
      0 0 15 0 0 0
      SF-M 596/99-08 0 0 5 0 0 0
      Ttrb/17885 1 0 23 0 0 0
      WPN:24791 1 0 4 0 0 0
      Wwt/15658
      0 0 11 0 0 0
      Price for each Query in Euro:
      0,58 0,70 1,50 0,50 0,80 1,80
      15,82 €
      18,00 €
      6,00 €
      56,90 €
      28,50 €
      11,08 €
      10,16 €
      16,50 €
      22,50 €
      7,50 €
      35,08 €
      6,58 €
      16,50 €
    ''',
    'Original filename': 'sample-invoice.pdf',
    'Subcategory': 'My subcategory',
    'Type': 'Email',
    'content': '''
      Some notes to the doc here
      
      -----
      #### document
      ![[linked_attachment.document.pdf]]
      #### original
      ![[linked_attachment.original.pdf]]
    ''',
    'tags': list([
      'paperless',
      'another-tag',
      'my_tag',
    ]),
  })
# ---
# name: test_export.2
  dict({
    'Amount': 93.5,
    'Collections': list([
      'Library',
    ]),
    'Date': '2025-04-18',
    'Import date': '2025-04-18T20:22:35.167018+00:00',
    'In inbox': True,
    'OCR result': '''
      Invoice
      Invoice Number INV-3337
      From:
      DEMO - Sliced Invoices
      Suite 5A-1204
      123 Somewhere Street
      Your City AZ 12345
      admin@slicedinvoices.com
      Order Number 12345
      Invoice Date January 25, 2016
      Due Date January 31, 2016
      Total Due $93.50
      To:
      Test Business
      123 Somewhere St
      Melbourne, VIC 3000
      test@test.com
      Hrs/Qty Service 1.00 Web Design
      This is a sample description... ANZ Bank
      ACC # 1234 1234
      BSB # 4321 432
      Paid
      Rate/Price $85.00 Adjust Sub Total
      0.00% $85.00
      Sub Total $85.00
      Tax $8.50
      Total $93.50
      Payment is due within 30 days from date of invoice. Late payment is subject to fees of 5% per month.
      Thanks for choosing DEMO - Sliced Invoices | admin@slicedinvoices.com
      Page 1/1
    ''',
    'Original filename': 'wordpress-pdf-invoice-plugin-sample.pdf',
    'Payment method': 'Discover',
    'Tax/VAT': 8.5,
    'Type': 'Receipt',
    'content': '''
      #### document
      ![[linked_attachment.document.pdf]]
      #### original
      ![[linked_attachment.original.pdf]]
    ''',
    'tags': list([
      'paperless',
    ]),
  })
# ---
# name: test_export.3
  dict({
    'Collections': list([
      'Library',
    ]),
    'Date': '2025-04-24',
    'Import date': '2025-04-23T22:24:59.945056+00:00',
    'In inbox': True,
    'OCR result': '''
      CPB Software (Germany) GmbH - Im Bruch 3 - 63897 Miltenberg/Main
      Musterkunde AG
      Mr. John Doe
      Musterstr. 23
      12345 Musterstadt Name: Stefanie Müller
      Phone: +49 9371 9786-0
      Invoice WMACCESS Internet
      VAT No. DE199378386
      Invoice No
      Customer No
      Invoice Period
      Date
      123100401
      12345
      01.02.2024 - 29.02.2024
      1. März 2024
      Service Description Amount
      -without VAT- quantity
      Total Amount
      Basic Fee wmView
      130,00 € 1
      130,00 €
      Basis fee for additional user accounts 10,00 € 0
      0,00 €
      Basic Fee wmPos
      50,00 € 0
      0,00 €
      Basic Fee wmGuide
      1.000,00 € 0
      0,00 €
      Change of user accounts
      10,00 € 0
      0,00 €
      Transaction Fee T1
      0,58 € 14
      8,12 €
      Transaction Fee T2 0,70 € 0
      0,00 €
      Transaction Fee T3
      1,50 € 162
      243,00 €
      Transaction Fee T4
      0,50 € 0
      0,00 €
      Transaction Fee T5 0,80 € 0
      0,00 €
      Transaction Fee T6 1,80 € 0
      0,00 €
      Transaction Fee G1 0,30 € 0
      0,00 €
      Transaction Fee G2
      0,30 € 0
      0,00 €
      Transaction Fee G3 0,40 € 0
      0,00 €
      Transaction Fee G4
      0,40 € 0
      0,00 €
      Transaction Fee G5 0,30 € 0
      0,00 €
      Transaction Fee G6 0,30 € 0
      0,00 €
      Total 381,12 €
      VAT 19 % 72,41 €
      Gross Amount incl. VAT 453,53 €
      Terms of Payment: Immediate payment without discount. Any bank charges must be paid by the invoice recipient.
      Bank fees at our expense will be charged to the invoice recipient!
      Please credit the amount invoiced to IBAN DE29 1234 5678 9012 3456 78 | BIC GENODE51MIC (SEPA Credit Transfer)
      This invoice is generated automatically and will not be signed
      Invoice Details
      Period: 01.02.2024 to 29.02.2024
      Unit: Musterkunde AG 12345
      Request sections: T1: T2: T3: T4: T5: T6: G1: G2: G3: G4: G5: G6:
      Amount in Euro: 0,58 0,70 1,50 0,50 0,80 1,80 0,30 0,30 0,40 0,40 0,30 0,30
      user-account-1 10 0 99 0 0 0 0 0 0 0 0 0 154,30 €
      user-account-2 4 0 63 0 0 0 0 0 0 0 0 0 96,82 €
      Transaction Fee Seg T1: T2: T3: T4: T5: T6: G1: G2: G3: G4: G5: G6:
      Queries in Total: 14 0 162 0 0 0 0 0 0 0 0 0
      Total in Euro: 8,12 € 0,00 € 243,00 € 0,00 € 0,00 € 0,00 € 0,00 € 0,00 € 0,00 € 0,00 € 0,00 € 0,00 € 251,12 €
      The explanation of the query fee categories (T1 to T6 and G1 to G6) can be found on our website:
      https://www.wmaccess.com/abfragekategorien
      Invoice Details for wmView Query Reference
      Period: 01.02.2024 to 29.02.2024
      Unit: Musterkunde AG 12345
      wmview, wmProfile and User Profiles Query Segments:
      Query Reference:
      T1: T2: T3: T4: T5: T6:
      *Not specified*
      4 0 9 0 0 0
      AZR/31/27439
      0 0 12 0 0 0
      CCL/3715
      0 0 4 0 0 0
      CRS/28432
      5 0 36 0 0 0
      Cs/52113
      0 0 19 0 0 0
      GS 32090 1 0 7 0 0 0
      Kpi/22695 2 0 6 0 0 0
      PG 7772
      0 0 11 0 0 0
      Rjn/11138
      0 0 15 0 0 0
      SF-M 596/99-08 0 0 5 0 0 0
      Ttrb/17885 1 0 23 0 0 0
      WPN:24791 1 0 4 0 0 0
      Wwt/15658
      0 0 11 0 0 0
      Price for each Query in Euro:
      0,58 0,70 1,50 0,50 0,80 1,80
      15,82 €
      18,00 €
      6,00 €
      56,90 €
      28,50 €
      11,08 €
      10,16 €
      16,50 €
      22,50 €
      7,50 €
      35,08 €
      6,58 €
      16,50 €
    ''',
    'Original filename': 'sample-invoice.pdf',
    'Type': 'Document',
    'content': '''
      #### document
      ![[linked_attachment.document.pdf]]
      #### original
      ![[linked_attachment.original.pdf]]
    ''',
    'tags': list([
      'paperless',
    ]),
  })
# ---
# name: test_export.4
  dict({
    'Collections': list([
      'Library',
    ]),
    'Date': '2025-04-25',
    'Import date': '2025-04-24T22:39:03.893648+00:00',
    'In inbox': True,
    'OCR result': 'Dummy PDF file',
    'Original filename': 'dummy (1).pdf',
    'Type': 'Document',
    'content': '''
      #### document
      ![[linked_attachment.document.pdf]]
      #### original
      ![[linked_attachment.original.pdf]]
    ''',
    'tags': list([
      'paperless',
      'missing-document',
    ]),
  })
# ---
# name: test_export[tree]
  '''
  test_export0/
  ├── _attachments/
  │   ├── 2025-04-18_sample-invoice_1.document.pdf
  │   ├── 2025-04-18_wordpress-pdf-invoice-plugin-sample_2.document.pdf
  │   ├── 2025-04-24_sample-invoice_3.document.pdf
  │   ├── 2025-04-24_sample-invoice_3.original.pdf
  │   └── 2025-04-25_missing_4.thumbnail.png
  ├── missing.md
  ├── sample-invoice (3).md
  ├── sample-invoice.md
  └── wordpress-pdf-invoice-plugin-sample.md
  
  '''
# ---
